# Sistemas-Proyecto2-Calendarizador

./: CMakeLists.txt  README.md  configurar_proyecto.sh  imgui.ini  simulador
data/: acciones.txt  example.txt  procesos.txt  recursos.txt
include/: accion.hpp  gui.hpp  parser.hpp  proceso.hpp  recurso.hpp  simulador.hpp  sincronizacion.hpp  utils.hpp
src/: gantt_fcfs.csv  gantt_priority.csv  gantt_rr.csv  gantt_sjf.csv  gantt_srtf.csv  gui.cpp  main.cpp  mm.cpp  mutex_resultado.csv  parser.cpp  programa  recurso.cpp  semaforo_resultado.csv  simulador  simulador.cpp  sincronizacion.cpp  utils.cpp
